# stealthnote-mobile

./: .gitignore  Cargo.toml  Config.toml  README.md  rust-toolchain.toml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/moproapp/: MainActivity.kt  MultiplierComponent.kt
android/app/src/main/java/uniffi/mopro/: mopro.kt
circuit/: stealthnote_jwt.json  zkemail_test.json
flutter/: firebase.json  pubspec.yaml
flutter/android/: settings.gradle
flutter/android/app/: build.gradle  google-services.json
flutter/android/app/src/main/: AndroidManifest.xml
flutter/android/app/src/main/kotlin/org/pse/stealthnote_mobile/: MainActivity.kt
flutter/ios/Runner/: GoogleService-Info.plist  Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: firebase_options.dart  main.dart
flutter/lib/models/: signed_message.dart
flutter/lib/screens/: message_card.dart  signin_card.dart
flutter/lib/services/: auth_service.dart  create_membershipt.dart  create_message.dart  fetch_googleJWTPubkey.dart  fetch_messages.dart  generate_ephemeral_key.dart  google_jwt_prover.dart  jwt_prover.dart  toggle_like.dart  upload_image.dart
flutter/mopro_flutter_plugin/android/: build.gradle
flutter/mopro_flutter_plugin/android/src/main/kotlin/com/example/mopro_flutter/: MoproFlutterPlugin.kt
flutter/mopro_flutter_plugin/android/src/main/kotlin/uniffi/mopro/: mopro.kt
flutter/mopro_flutter_plugin/ios/: mopro_flutter.podspec
flutter/mopro_flutter_plugin/ios/Classes/: MoproFlutterPlugin.swift
flutter/mopro_flutter_plugin/lib/: mopro_flutter.dart  mopro_flutter_method_channel.dart  mopro_flutter_platform_interface.dart
flutter/test/: widget_test.dart
ios/MoproApp/: ContentView.swift
ios/MoproApp.xcodeproj/: project.pbxproj
public/: jwt_input.json  jwt_input_snapshot_real.json
react-native/: .gitignore  README.md  metro.config.js  package.json
react-native/app/(tabs)/: index.tsx
react-native/modules/mopro/: index.ts
react-native/modules/mopro/android/src/main/java/expo/modules/mopro/: MoproModule.kt
react-native/modules/mopro/ios/: MoproModule.swift
react-native/modules/mopro/src/: MoproModule.web.ts
src/: lib.rs
src/api/: api.rs  mod.rs  provider.rs
src/api/api/: file.rs
src/api/provider/: google.rs
src/api_server/: api.rs  likes.rs  membership.rs  message.rs  mod.rs  provider.rs
src/api_server/api/: file.rs
src/api_server/provider/: google.rs
src/proof/: emphemeral_key.rs  ephemeral_key.rs  jwt_proof.rs  mod.rs  poseidon2.rs
