[package]
name = "mopro-zkemail-nr"
version = "0.1.0"
edition = "2021"

# We're going to build a static library named mopro_bindings
# This library name should not be changed
[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "mopro_bindings"

# Adapters for different proof systems
[features]
default = []

[dependencies]
mopro-ffi = { git = "https://github.com/zkmopro/mopro.git" }
uniffi = { version = "=0.29.0" }
thiserror = "2.0.12"
# build for Android
noir = { git = "https://github.com/zkmopro/noir-rs", features = ["barretenberg", "android-compat"] }
# build for iOS
# noir = { git = "https://github.com/zkmopro/noir-rs", features = ["barretenberg"] }

[build-dependencies]
mopro-ffi = { git = "https://github.com/zkmopro/mopro.git" }
uniffi = { version = "=0.29.0", features = ["build"] }
