[package]
name = "mopro-zkemail-nr"
version = "0.1.0"
edition = "2021"

# We're going to build a static library named mopro_bindings
# This library name should not be changed
[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "mopro_bindings"

# Adapters for different proof systems
[features]
default = []

[dependencies]
mopro-ffi = { git = "https://github.com/zkmopro/mopro.git" }
uniffi = { version = "=0.29.0" }
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
ed25519 = "2.2.3"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8"
rand_core = "0.6"
light-poseidon = "=0.3.0"
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
sha256 = "1.6.0"
sha2 = "0.10"
anyhow = "1.0.98"

# build for Android
noir = { git = "https://github.com/zkmopro/noir-rs", features = ["barretenberg", "android-compat"] }
chrono = "0.4.40"
hex = "0.4.3"
byteorder = "1.5.0"


# build for iOS
# noir = { git = "https://github.com/zkmopro/noir-rs", features = ["barretenberg"] }

[build-dependencies]
mopro-ffi = { git = "https://github.com/zkmopro/mopro.git" }
uniffi = { version = "=0.29.0", features = ["build"] }

[dev-dependencies]
serial_test = "3.0.0"
